# recursive_calculator

./: .gitignore  Cargo.toml  LICENSE  README.md  lib.recalc  todo.txt
resources/: run_test.recalc  test_input.recalc  test_output.txt
src/: bool_gen.rs  compile.rs  ctrlc_handler.rs  environment.rs  expression.rs  garbage.rs  main.rs  math.rs  parse.rs  program.rs  run.rs  test.rs
src/math/: format.rs  pow.rs  value.rs
src/run/: help.txt  special_command.rs
