[package]
name = "recursive_calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive", "cargo"] }
ctrlc = "3.3.1"
either = "1.8.1"
fastrand = "2.0.0"
malachite = "0.3.2"
nom = "7.1.3"
once_cell = "1.17.1"
thiserror = "1.0.40"

[dev-dependencies]
itertools = "0.11.0"
